[gd_scene load_steps=2 format=3 uid="uid://cd6accu57r5mt"]

[ext_resource type="Script" path="res://scenes/UI/Skill Builder/skill_builder.gd" id="1_hoa47"]

[node name="SkillBuilder" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hoa47")
metadata/_edit_lock_ = true

[connection signal="connection_from_empty" from="." to="." method="_on_connection_from_empty"]
[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="connection_to_empty" from="." to="." method="_on_connection_to_empty"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
